<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_list_title">To Do List</string>
    <string name="name_input_string">Tu nombre:</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="input_task_name">Nombre de la tarea</string>
    <string name="input_task_desc">Descripcion</string>
    <string name="input_task_priority">Prioridad</string>
    <string name="btn_capture">Agregar</string>
    <string name="splash_title">ToDoList</string>
</resources>